--- a/projects.json
+++ b/projects.json
@@ -2,6 +2,7 @@
     {
         "title": "Box-shadow generator",
         "description": "Visual CSS box-shadow generator",
+        "description_ru": "Визуальный генератор для CSS-свойства box-shadow",
         "tags": ["HTML", "SCSS", "JavaScript"],
         "url": "https://box-shadow-generator.netlify.app/",
         "lang": ["en"],
@@ -12,6 +13,7 @@
         "title": "Minecraft Quick Guide",
         "lang": ["ru"],
         "description": "All potion recipes in one table",
+        "description_ru": "Рецепты всех зелий в одной таблице",
         "tags": ["HTML", "SCSS", "JavaScript"],
         "url": "https://mcguide.netlify.app/",
         "year": 2020,
@@ -21,6 +23,7 @@
         "title": "JS Get Key Info",
         "lang": ["en"],
         "description": "A simple tool that helps easily get information about any keyboard key",
+        "description_ru": "Быстрое получение информации о любой клавише на клавиатуре",
         "tags": ["HTML", "SCSS", "JavaScript"],
         "url": "https://jskeyinfo.netlify.app/",
         "year": 2020,
@@ -30,6 +33,7 @@
         "title": "JS Calculator",
         "lang": ["en"],
         "description": "A simple calculator made with JavaScript",
+        "description_ru": "Простой калькулятор на JavaScript",
         "tags": ["HTML", "CSS", "JavaScript"],
         "url": "https://jscalcapp.netlify.app/",
         "year": 2020,
@@ -39,6 +43,7 @@
         "title": "MafiaHelp",
         "lang": ["ru"],
         "description": "",
+        "description_ru": "",
         "tags": ["Vue"],
         "url": "https://mafiah.netlify.app/",
         "year": 2022,
@@ -49,8 +54,37 @@
         "lang": ["en"],
         "tags": ["Vue"],
         "description": "A huge list of various symbols",
+        "description_ru": "Большой список различных отсутствующих на клавиатуре символов с лёгким копированием",
         "url": "https://smbls.netlify.app/",
         "year": 2023,
         "image": "https://raw.githubusercontent.com/thundiverter/thundiverter.github.io/main/images/smbls-rewritten.png"
+    },
+    {
+        "title": "Coursework #1",
+        "lang": ["ru"],
+        "tags": ["CSS", "JS", "Node.js", "SQLite"],
+        "description": "A part of my course work on the \"Programming Technologies\" discipline",
+        "description_ru": "Часть курсовой работы по дисциплине «Технологии программирования»",
+        "url": "https://github.com/thundiverter/progtech-course",
+        "year": 2023,
+        "image": "https://raw.githubusercontent.com/thundiverter/progtech-course/main/screenshots/screenshot-dispatch.png"
+    },
+    {
+        "title": "Coursework #2",
+        "lang": ["ru"],
+        "description": "",
+        "description_ru": "",
+        "tags": ["Bootstrap 5", "JS", "Node.js", "SQLite"],
+        "url": "https://github.com/thundiverter/progtech-course-2",
+        "image": "https://raw.githubusercontent.com/thundiverter/progtech-course-2/main/screenshots/screenshot-waiter-1.png"
+    },
+    {
+        "title": "Website for my university group",
+        "lang": ["ru"],
+        "description": "A website with homework, timetable, notes and more",
+        "description_ru": "Веб-сайт с домашними заданиями, расписанием, конспектами и многим другим",
+        "tags": ["Vue", "Firebase", "Marked.js", "KaTeX"],
+        "url": "https://github.com/thundiverter/university-group-website/tree/main",
+        "image": "https://raw.githubusercontent.com/thundiverter/university-group-website/main/03/screenshot_desktop_8.png"
     }
 ]
