--- a/projects.json
+++ b/projects.json
@@ -90,13 +90,23 @@
         "image": "https://raw.githubusercontent.com/thundiverter/progtech-course-2/main/screenshots/screenshot-waiter-1.png"
     },
     {
+        "title": "Coursework #3. University Discipline",
+        "lang": ["ru"],
+        "description": "A part of my course work on the \"Architecture and software of computing systems\" discipline",
+        "description_ru": "Часть курсовой работы по дисциплине «Архитектура и ПО вычислительных систем»",
+        "tags": ["HTML", "CSS", "JavaScript"],
+        "url": "https://github.com/thundiverter/alg-course",
+        "year": 2023,
+        "image": "https://raw.githubusercontent.com/thundiverter/alg-course/main/coursework-cs.png"
+    },
+    {
         "title": "Website for my university group",
         "lang": ["ru"],
         "description": "A website with homework, timetable, notes and more",
         "description_ru": "Веб-сайт с домашними заданиями, расписанием, конспектами и многим другим",
         "tags": ["Vue", "Firebase", "Marked.js", "KaTeX"],
         "url": "https://github.com/thundiverter/university-group-website/tree/main",
-        "year": 2024,
+        "year": "2023−2024",
         "image": "https://raw.githubusercontent.com/thundiverter/university-group-website/main/03/screenshot_desktop_8.png"
     }
 ]
